--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,7 @@ services:
     ports:
       - '80:80'
       - '443:443'
+  php:
+    container_name: iim_php
+    hostname: iim_php
+    build: ./containers/php
