--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,11 @@ services:
     container_name: iim_php
     hostname: iim_php
     build: ./containers/php
+  mysql:
+    container_name: iim_mysql
+    hostname: iim_mysql
+    build: ./containers/mysql
+    ports:
+      - '3306:3306'
+    environment:
+      - MYSQL_ROOT_PASSWORD=root
